--- a/pom.xml
+++ b/pom.xml
@@ -323,6 +323,7 @@
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-compiler-plugin</artifactId>
+                  <version>2.5.1</version>
                   <configuration>
                      <fork>true</fork>
                      <compilerArgs>
